docs/v5.3.0/_sources/gallery/experiment/sphere/Qsca_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/Qsca_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_Qsca_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_Qsca_vs_diameter.py:


Sphere: Qsca vs diameter
========================

.. GENERATED FROM PYTHON SOURCE LINES 6-46



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_Qsca_vs_diameter_001.png
   :alt: Qsca vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_Qsca_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    +-----------------------+-----------------------+
    | Sellmeier Materials   | Tabulated Materials   |
    +=======================+=======================+
    | fused_silica          | calcium               |
    +-----------------------+-----------------------+
    | water                 | gold                  |
    +-----------------------+-----------------------+
    | BAK1                  | copper                |
    +-----------------------+-----------------------+
    | soda_lime_glass       | silicon               |
    +-----------------------+-----------------------+
    | lithium_niobate       | aluminium             |
    +-----------------------+-----------------------+
    | argon                 | iron                  |
    +-----------------------+-----------------------+
    | flint                 | polyetylene           |
    +-----------------------+-----------------------+
    | BAF10                 | sodium                |
    +-----------------------+-----------------------+
    | germanium             | silver                |
    +-----------------------+-----------------------+
    | air                   | nickel                |
    +-----------------------+-----------------------+
    | crown                 | zinc                  |
    +-----------------------+-----------------------+
    | SF5                   |                       |
    +-----------------------+-----------------------+
    | polystyren            |                       |
    +-----------------------+-----------------------+
    | BK7                   |                       |
    +-----------------------+-----------------------+
    | acetone               |                       |
    +-----------------------+-----------------------+
    | ZBLAN                 |                       |
    +-----------------------+-----------------------+

    [<matplotlib.lines.Line2D object at 0x7fa354c21190>, <matplotlib.lines.Line2D object at 0x7fa354c21a50>, <matplotlib.lines.Line2D object at 0x7fa353c376d0>]





|

.. code-block:: Python

    import numpy as np

    from PyMieSim import (
        ureg,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        MaterialSet,
        MediumSet,
        Experiment,
        print_available,
        SellmeierMaterial,
    )

    print_available()

    polarization_set = PolarizationSet(
        angles=[0.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[405] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    polystyrene = SellmeierMaterial(material_name="BK7")

    scatterer = SphereSet(
        diameter=np.linspace(10, 1000, 150) * ureg.nanometer,
        material=MaterialSet(materials=[polystyrene]),
        medium=MediumSet(refractive_indices=[1.33, 1.34, 1.5]),
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source)

    result = experiment.get("Qsca")

    result.plot(x="scatterer:diameter", show=True)


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.196 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_Qsca_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: Qsca_vs_diameter.ipynb <Qsca_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: Qsca_vs_diameter.py <Qsca_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: Qsca_vs_diameter.zip <Qsca_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
