docs/v5.6.1/_sources/gallery/experiment/sphere/Qsca_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/Qsca_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_Qsca_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_Qsca_vs_diameter.py:


Sphere: Qsca vs diameter
========================

.. GENERATED FROM PYTHON SOURCE LINES 6-46



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_Qsca_vs_diameter_001.png
   :alt: Qsca vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_Qsca_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    BK7            sellmeier  specs/SCHOTT-optical/P-BK7
    aluminium      tabulated  main/Al/Rakic
    fused_silica   sellmeier  main/SiO2/Malitson
    gold           tabulated  main/Au/Olmon-ev
    silver         tabulated  main/Ag/Johnson
    water          sellmeier  main/H2O/Daimon-19.0C

    [<matplotlib.lines.Line2D object at 0x7fe30ea92110>, <matplotlib.lines.Line2D object at 0x7fe30ea91a10>, <matplotlib.lines.Line2D object at 0x7fe30c85b190>]





|

.. code-block:: Python

    import numpy as np

    from PyMieSim import (
        ureg,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        MaterialSet,
        MediumSet,
        Experiment,
        print_available,
        SellmeierMaterial,
    )

    print_available()

    polarization_set = PolarizationSet(
        angles=[0.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[405] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    polystyrene = SellmeierMaterial(material_name="BK7")

    scatterer = SphereSet(
        diameter=np.linspace(10, 1000, 150) * ureg.nanometer,
        material=MaterialSet(materials=[polystyrene]),
        medium=MediumSet(refractive_indices=[1.33, 1.34, 1.5]),
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source)

    result = experiment.get("Qsca")

    result.plot(x="scatterer:diameter", show=True)


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.111 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_Qsca_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: Qsca_vs_diameter.ipynb <Qsca_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: Qsca_vs_diameter.py <Qsca_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: Qsca_vs_diameter.zip <Qsca_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
